# harness_builder

./: .env.example  .gitignore  MILESTONES.md  README.md  REQUIREMENTS.md  docker-compose.yml
backend/: Dockerfile  README.md  Taskfile.yml  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260418_0001_initial.py  20260613_0002_add_is_edited_to_generated_files.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  presets.py  projects.py
backend/app/core/: config.py  presets.py  questionnaire.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: auth.py  preset.py  project.py
backend/app/services/: answers.py  export.py  generator.py
backend/app/templates/agent_rules/: AGENTS.md.j2  PROJECT_RULES.md.j2
backend/app/templates/openspec/: design.md.j2  openspec.yaml.j2  proposal.md.j2  spec.md.j2  tasks.md.j2
backend/app/templates/prompts/: bugfix.md.j2  feature.md.j2  review.md.j2
backend/app/templates/quality/: definition_of_done.md.j2  review_checklist.md.j2  test_strategy.md.j2
backend/app/templates/scripts/: verify.sh.j2
backend/app/templates/tool_configs/: CLAUDE.md.j2  codex.general.md.j2  cursor.project.mdc.j2
backend/tests/: conftest.py  test_auth.py  test_generation.py  test_migrations.py  test_presets.py  test_projects.py  test_questionnaire_schema.py
frontend/: Dockerfile  README.md  Taskfile.yml  components.json  eslint.config.js  index.html  package.json  playwright.config.js  playwright.config.ts  pnpm-lock.yaml  tsconfig.node.json  (+4 more)
(+89 files in other folders)
