[project]
name = "harness-builder-backend"
version = "0.1.0"
description = "FastAPI backend for Harness Builder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.10.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.15.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
